# j3di

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: edit.rs  file.rs  main.rs  utils.rs
tests/: cli.rs
tests/data/: test.json
