[package]
name = "j3di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
serde_json = "1.0.79"
clap-verbosity-flag = "0.4.1"
anyhow = "1.0.55"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
